Correct name overflow on chart person_blocks when in non-detailed mode.  Updates only to Colors and Clouds themes.

--- a/themes/clouds/style.css
+++ b/themes/clouds/style.css
@@ -763,6 +763,8 @@ color:#7af;
 font-weight: bold;
 }
 
+span .NAME {display: block; max-height: 30px; overflow: hidden;}
+
 a:hover .name1, a:hover.name2,  a:hover .nameZoom  {color: #f00; font-weight: bold}
 
 .details1 {
