--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -724,6 +724,8 @@ font-weight: bold;
 overflow: hidden;
 }
 
+span .NAME {display: block; max-height: 30px; overflow: hidden;}
+
 a:hover .name1, a:hover.name2,  a:hover .nameZoom  {color: #f00; font-weight: bold}
 
 .details1 {
@@ -1322,6 +1324,7 @@ height:600px;
 overflow:hidden;
 border:solid #00f 1px;
 }
+
 
 .lifespan_outer a {
 color:#000;
